k8s/order.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: order-app
  template:
    metadata:
      labels:
        app: order-app
    spec:
      containers:
        - name: order-app
          image: stepheng323/order-service
          ports:
            - containerPort: 4002

---
apiVersion: v1
kind: Service
metadata:
  name: order-cluster-ip
spec:
  type: ClusterIP
  selector:
    app: order-app
  ports:
    - port: 4002
      targetPort: 4002
