k8s/product-db-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: product-db-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: product-db
  template:
    metadata:
      labels:
        app: product-db
    spec:
      containers:
        - name: product-db
          image: mysql:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 3306
          volumeMounts:
            - name: mysql-storage
              mountPath: /var/lib/mysql
      volumes:
        - name: mysql-storage
          persistentVolumeClaim:
            claimName: product-db-pvc

---
apiVersion: v1
kind: Service
metadata:
  name: product-db-cluster-ip
spec:
  type: ClusterIP
  selector:
    app: product-db
  ports:
    - port: 3306
      targetPort: 3306
