k8s/product-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: product-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: product-app
  template:
    metadata:
      labels:
        app: product-app
    spec:
      containers:
        - name: product-app
          image: nestjs-scaffold-product
          ports:
            - containerPort: 4001

---
apiVersion: v1
kind: Service
metadata:
  name: product-cluster-ip
spec:
  type: ClusterIP
  selector:
    app: product-app
  ports:
    - port: 4001
      targetPort: 4001
