k8s/user-db-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-db-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user-db
  template:
    metadata:
      labels:
        app: user-db
    spec:
      containers:
        - name: user-db
          image: postgres:alpine
          imagePullPolicy: Never
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: postgres-storage
              mountPath: /var/lib/postgresql/data
              subPath: postgres
      volumes:
        - name: postgres-storage
          persistentVolumeClaim:
            claimName: user-db-pvc

---
apiVersion: v1
kind: Service
metadata:
  name: user-db-cluster-ip
spec:
  type: ClusterIP
  selector:
    app: user-db
  ports:
    - port: 5432
      targetPort: 5432
