k8s/user-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user-app
  template:
    metadata:
      labels:
        app: user-app
    spec:
      containers:
        - name: user-app
          image: nestjs-scaffold-user
          imagePullPolicy: Never
          ports:
            - containerPort: 4000

---
apiVersion: v1
kind: Service
metadata:
  name: user-cluster-ip
spec:
  type: ClusterIP
  selector:
    app: user-app
  ports:
    - port: 4000
      targetPort: 4000
