k8s/ingress-service.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    # nginx.ingress.kubernetes.io/rewrite-target: /$2
    kubernetes.io/ingress.class: nginx
    # nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
    - http:
        paths:
          - path: /user
            pathType: Prefix
            backend:
              service:
                name: user-cluster-ip
                port:
                  number: 4000
          - path: /product
            pathType: Prefix
            backend:
              service:
                name: product-cluster-ip
                port:
                  number: 4001
          - path: /order
            pathType: Prefix
            backend:
              service:
                name: order-cluster-ip
                port:
                  number: 4002
